# llm-claude-cli

./: CLAUDE.md  README.md  llm_claude_cli.py  llm_claude_code.py  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/llm_claude_code/: __init__.py
tests/: __init__.py  conftest.py  test_conversation.py  test_e2e_plugin.py  test_errors.py  test_model.py  test_plugin.py  test_schema.py  test_streaming.py
