[project]
name = "llm-claude-code"
version = "0.1.0"
description = "LLM plugin for using Anthropic models through Claude Code CLI"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Ben Tucker", email = "ben@btucker.net" }
]
requires-python = ">=3.10"
dependencies = [
    "llm>=0.19",
]

[project.entry-points."llm"]
claude_code = "llm_claude_code"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_claude_code"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=llm_claude_code",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["src/llm_claude_code"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
