[project]
name = "llm-claude-cli"
version = "0.1.3"
description = "LLM plugin for Claude models via Claude Code CLI"
readme = "README.md"
license = "MIT"
authors = [{ name = "Ben Tucker", email = "ben@btucker.net" }]
requires-python = ">=3.10"
dependencies = ["llm>=0.26"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "coverage[toml]>=7.0",
]

[project.urls]
Homepage = "https://github.com/btucker/llm-claude-cli"
Repository = "https://github.com/btucker/llm-claude-cli"
Issues = "https://github.com/btucker/llm-claude-cli/issues"

[project.entry-points.llm]
claude-cli = "llm_claude_cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["llm_claude_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=llm_claude_cli --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["llm_claude_cli"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 80
show_missing = true
